<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InsertUpdateActivity"
    tools:showIn="@layout/activity_insert_update"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flower_name_insert"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/etFlowerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flower_price_insert"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/etFlowerPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flower_category_insert"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <Spinner
            android:id="@+id/spFlowerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_flower_categories"
            >
        </Spinner>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:onClick="SelectImage"

            />

        <ImageView
            android:id="@+id/ivFlowerSelectImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_weight="1"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flower_instructions_insert"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_Flower_Instruct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:autofillHints="Please insert instructions"
                android:lines="10" />


        </ScrollView>

    </LinearLayout>

    </LinearLayout>


